--- a/src/config.yaml
+++ b/src/config.yaml
@@ -11,13 +11,41 @@ website_style:
 icons: []
 
 
+# page part
 pages:
+  # about page, here you can modify
   about:
-    icons: ""
-    widgets: ""
+    icons:
+      - "/path/to/icon"
+
+    widgets:
+      - "path/to/widget1"
+      - "path/to/widget2"
+
+    contents:
+      first_paragraph:
+        title:
+          - "Hello, World1"
+        content:
+          - "Hello, World1"
+
+      second_paragraph:
+        title:
+          - "Hello, World2"
+        content:
+          - "Hello, World2"
+
+      Third_paragraph:
+        title:
+          - "Hello, World3"
+        content:
+          - "Hello, World3"
+  # skill page
   skill:
     icons: ""
     widgets: ""
+
+  #
   research:
     icons: ""
     widgets: ""
