--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
