--- a/public/config.json
+++ b/public/config.json
@@ -3,13 +3,17 @@
   "icons": {
 
   },
+  "references": "/references.bib",
   "pages": {
     "home": {
-      "avatar": "/images/avatar.png",
-      "name": "Baimiaomiao",
+      "avatar": {
+        "init": "/images/avatar_init.jpg",
+        "hovered": "/images/avatar_hover.jpg"
+      },
+      "name": "MMeowhite",
       "institution": "Sichuan University",
       "field": "MEDICINE / BIOINFORMATICS / MATHEMATICS / PHYSICS",
-      "profile": "Hello, I'm Baimiaomiao, welcome to my website!"
+      "profile": "Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!"
     },
     "about": {
       "icons": [
@@ -85,24 +89,29 @@
 
     "topNavBar": [
       {
-        "name": "Bio",
-        "link": ""
-      },
-      {
-        "name": "experience",
-        "link": ""
-      },
-      {
-        "name": "research",
-        "link": ""
-      },
-      {
-        "name": "publication",
-        "link": ""
-      },
-      {
-        "name": "blog",
-        "link": ""
+        "title": "Welcome To My Home!(Still developing)",
+        "link": [
+          {
+            "name": "Bio",
+            "link": "/"
+          },
+          {
+            "name": "experience",
+            "link": "/"
+          },
+          {
+            "name": "research",
+            "link": "/"
+          },
+          {
+            "name": "publication",
+            "link": "/"
+          },
+          {
+            "name": "blog",
+            "link": "/blog"
+          }
+        ]
       }
     ],
 
@@ -119,7 +128,7 @@
       {
         "type": "github",
         "icon": "/images/link_icon/github.svg",
-        "link": "https://github.com/Baimiaomiao123"
+        "link": "https://github.com/MMeowhite"
       },
       {
         "type": "linkedin",
@@ -135,6 +144,11 @@
         "type": "youtube",
         "icon": "/images/link_icon/youtube.svg",
         "link": "https://www.youtube.com/@pengmiao-bmm"
+      },
+      {
+        "type": "bluesky",
+        "icon": "/images/link_icon/bluesky.svg",
+        "link": "https://bsky.app/profile/mmeowhite.bsky.social"
       }
     ]
   }
