--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.1",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
