--- a/public/config.json
+++ b/public/config.json
@@ -13,44 +13,10 @@
       "name": "MMeowhite",
       "institution": "Sichuan University",
       "field": "MEDICINE / BIOINFORMATICS / MATHEMATICS / PHYSICS",
-      "profile": "Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!"
+      "profile": "Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!",
+      "quote": "What hinders learning is absolutely not the difficulty of the knowledge itself, but the unreasonable design of the learning gradient and the lack of prerequisite knowledge."
     },
-    "about": {
-      "icons": [
-        "/path/to/icon"
-      ],
-      "widgets": [
-        "path/to/widget1",
-        "path/to/widget2"
-      ],
-      "contents": {
-        "first_paragraph": {
-          "title": [
-            "First_title..."
-          ],
-          "content": [
-            ""
-          ]
-        },
-        "second_paragraph": {
-          "title": [
-            "Second_title..."
-          ],
-          "content": [
-            "Hello, World2"
-          ]
-        },
-        "Third_paragraph": {
-          "title": [
-            "Third_title..."
-          ],
-          "content": [
-            "Hello, World3"
-          ]
-        }
-      }
-    },
-    "skill": {
+    "experience": {
       "icons": "",
       "widgets": ""
     },
@@ -58,10 +24,162 @@
       "icons": "",
       "widgets": ""
     },
-    "more": {
-      "icons": "",
-      "widgets": ""
-    }
+    "publication": {},
+    "blog": [
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "academic",
+            "link": ""
+          },
+          {
+            "name": "computer",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "academic",
+            "link": ""
+          },
+          {
+            "name": "science",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "nature",
+            "link": ""
+          },
+          {
+            "name": "cell",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "cell",
+            "link": ""
+          },
+          {
+            "name": "nature",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "academic",
+            "link": ""
+          },
+          {
+            "name": "computer",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "academic",
+            "link": ""
+          },
+          {
+            "name": "computer",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "academic",
+            "link": ""
+          },
+          {
+            "name": "computer",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "academic",
+            "link": ""
+          },
+          {
+            "name": "computer",
+            "link": ""
+          }
+        ]
+      },
+      {
+        "title": "🎉 Easily create your own simple yet highly customizable blog",
+        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
+        "date": "Oct 27, 2023",
+        "link": "",
+        "imageSrc": "/images/avatar.png",
+        "tags": [
+          {
+            "name": "academic",
+            "link": ""
+          },
+          {
+            "name": "computer",
+            "link": ""
+          }
+        ]
+      }
+    ]
   },
   "widgets": {
     "navbar": {
@@ -97,15 +215,15 @@
           },
           {
             "name": "experience",
-            "link": "/"
+            "link": "/exprience"
           },
           {
             "name": "research",
-            "link": "/"
+            "link": "/research"
           },
           {
             "name": "publication",
-            "link": "/"
+            "link": "/publication"
           },
           {
             "name": "blog",
@@ -144,11 +262,6 @@
         "type": "youtube",
         "icon": "/images/link_icon/youtube.svg",
         "link": "https://www.youtube.com/@pengmiao-bmm"
-      },
-      {
-        "type": "bluesky",
-        "icon": "/images/link_icon/bluesky.svg",
-        "link": "https://bsky.app/profile/mmeowhite.bsky.social"
       }
     ]
   }
