--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resumewebsite",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.21.1",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
+    "katex": "^0.16.20",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
+    "pyodide": "^0.27.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
@@ -20,8 +23,14 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
