blog page config and test

--- a/public/config.json
+++ b/public/config.json
@@ -26,161 +26,7 @@
       "widgets": ""
     },
     "publication": {},
-    "blog": [
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "academic",
-            "link": ""
-          },
-          {
-            "name": "computer",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "academic",
-            "link": ""
-          },
-          {
-            "name": "science",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "nature",
-            "link": ""
-          },
-          {
-            "name": "cell",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "cell",
-            "link": ""
-          },
-          {
-            "name": "nature",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "academic",
-            "link": ""
-          },
-          {
-            "name": "computer",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "academic",
-            "link": ""
-          },
-          {
-            "name": "computer",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "academic",
-            "link": ""
-          },
-          {
-            "name": "computer",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "academic",
-            "link": ""
-          },
-          {
-            "name": "computer",
-            "link": ""
-          }
-        ]
-      },
-      {
-        "title": "🎉 Easily create your own simple yet highly customizable blog",
-        "description": "Take full control of your personal brand and privacy by migrating away from the big tech platforms!",
-        "date": "Oct 27, 2023",
-        "link": "",
-        "imageSrc": "/images/avatar.png",
-        "tags": [
-          {
-            "name": "academic",
-            "link": ""
-          },
-          {
-            "name": "computer",
-            "link": ""
-          }
-        ]
-      }
-    ]
+    "blog": {}
   },
   "widgets": {
     "navbar": {
