--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.20",
+    "markmap": "^0.6.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "pyodide": "^0.27.1",
@@ -28,9 +29,11 @@
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
+    "remark-admonitions": "^1.2.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
+    "remark-toc": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
