--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rehype-highlight": "^7.0.1",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-admonitions": "^1.2.1",
     "remark-gfm": "^4.0.0",
