--- a/src/pages/Blog/blog_config.json
+++ b/src/pages/Blog/blog_config.json
@@ -1,10 +1,11 @@
 [
   {
-    "id": 1,
+    "id": 0,
     "abstract": "Creating your own blog can be a fun and rewarding project, and with modern web technologies, it's easier than ever to build a simple yet highly customizable blog that fits your needs. Whether you're a beginner or an experienced developer, this guide will walk you through the steps to set up a blog using popular tools like React, Markdown, and Bootstrap. You'll learn how to structure your blog's content, create dynamic pages, and apply custom styles to make it truly your own. By the end, you'll have a fully functional blog that is both easy to maintain and flexible enough to grow with your content.",
     "title": "\uD83C\uDF89 Easily create your own simple yet highly customizable blog",
     "slug": "understanding-single-cell-sequencing",
     "author": "MMeowhite",
+    "authorImg": "/images/avatar_init.jpg",
     "location": "Palo Alto, United States",
     "resource": "pages/Blog/resources/2025/01/single_cell.md",
     "featuredImage": "pages/Blog/resources/2025/01/avatar.png",
@@ -33,7 +34,7 @@
     ]
   },
   {
-    "id": 2,
+    "id": 1,
     "abstract": "Creating your own blog can be a fun and rewarding project, and with modern web technologies, it's easier than ever to build a simple yet highly customizable blog that fits your needs. Whether you're a beginner or an experienced developer, this guide will walk you through the steps to set up a blog using popular tools like React, Markdown, and Bootstrap. You'll learn how to structure your blog's content, create dynamic pages, and apply custom styles to make it truly your own. By the end, you'll have a fully functional blog that is both easy to maintain and flexible enough to grow with your content.",
     "title": "\uD83C\uDF89 Easily create your own simple yet highly customizable blog",
     "slug": "understanding-sequencing-2",
