--- a/public/config.json
+++ b/public/config.json
@@ -62,7 +62,7 @@
           },
           {
             "name": "Experience",
-            "link": "/exprience"
+            "link": "/experience"
           },
           {
             "name": "Research",
