--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "github-markdown-css": "^5.8.1",
@@ -35,6 +36,7 @@
     "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
+    "video-embed": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
