--- a/public/config.json
+++ b/public/config.json
@@ -107,7 +107,7 @@
           "time": "September 2018 - July 2023",
           "major": "Bachelor of Medicine in Medical Imaging (Radiology and Diagnostic Technology)",
           "GPA": "3.6 / 5.0",
-          "course": "Radiology, Internal medicine"
+          "course": "Medical Imaging and Diagnostic Radiology, Ultrasound Diagnostics, Interventional Radiology, Nuclear Medicine, Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Physiology, Biochemistry and Molecular Biology, Pathology, Immunology, and Cell Biology"
         },
         {
           "university": {
@@ -117,8 +117,8 @@
           },
           "time": "July 2023 - Present",
           "major": "Master of Medicine in Basic Medicine (Chemistry and Molecular Biology)",
-          "GPA": "3.5 / 4.0",
-          "course": "Biochemistry, Advance Science"
+          "GPA": "3.6 / 4.0",
+          "course": "The Basic Cellular and Molecular Principles of Pathogenesis, Medical Molecular Biology, Medicinal Biotechnology Frontier, Seperation and Purification Technology of Protein and Enzyme, Nucleic Acid Molecular Cloning Technique, Practical Histological Technique"
         }
       ],
       "internshipsAndVolunteering": [
@@ -202,7 +202,7 @@
         {
          "field": "Computer Science",
          "list": {
-           "Programming Languages": ["C", "Java", "Bash", "Python", "R", "MATLAB", "Javascript", "MySQL"],
+           "Programming Languages": "C, Java, Linux, Python, R, MATLAB, Javascript, MySQL",
            "Framework and libraries": {
              "Bioinformatics": [
                "RNA-Seq quality control and data preprocessing: Trimming, Filtering, Alignment (STAR, HISAT2)",
@@ -221,21 +221,21 @@
           "field": "Medicine",
           "list": {
             "Clinical Skills": "History taking, Physical Examination, Vital Signs Monitoring, Emergency Skills etc.",
-            "Molecular Biology Techniques": ["PCR", "qPCR", "RT-PCR", "Western Blot", "ELISA"],
-            "Cell Biology Techniques": ["Cell Culture", "Cell Transfection", "Immunofluorescence", "Flow Cytometry"],
-            "Animal Models": ["Mouse Models construction", "Pharmacological Studies"],
-            "Scientific Writing": ["Scientific Paper Writing", "Literature Review", "Research Proposal Preparation"]
+            "Molecular Biology Techniques": "qPCR, Western Blot, ELISA, RNAi, In Situ Hybridization",
+            "Cell Biology Techniques": "Cell Culture and Transfection, Organoid Culture, Immunofluorescence, Flow Cytometry",
+            "Animal Models": "Mouse Tumor Models Construction, Pharmacological Studies",
+            "Scientific Writing": "Scientific Paper Writing, Literature Review, Research Proposal Preparation"
           }
         }
       ],
       "awardsAndHonors": [
         {
-          "name": "123",
-          "time": "456"
+          "name": "Advanced Individual in Technological Innovation",
+          "time": "2022.09"
         },
         {
-          "name": "`456",
-          "time": "789"
+          "name": "Third-Class Scholarship of the University",
+          "time": "2022.09"
         }
       ]
     },
