--- a/public/config.json
+++ b/public/config.json
@@ -230,12 +230,10 @@
       ],
       "awardsAndHonors": [
         {
-          "name": "Advanced Individual in Technological Innovation",
-          "time": "2022.09"
-        },
-        {
-          "name": "Third-Class Scholarship of the University",
-          "time": "2022.09"
+          "name": "Third-Class Scholarship for Advanced Individual in Technological Innovation",
+          "unit": "Chongqing Medical University",
+          "time": "September 2022",
+          "desc": "Awarded for <b>leadership in \"The 2020 University Innovation Experiment Project\" on NMDA receptor NR3A knockout mice</b> and <b>contributions to the \"Sky Project in School of Life Sciences\" on the role of NR3A in depression molecular mechanism</b>, as well as for winning the <b>Excellence Award in \"The 8th Concept Cup at Chongqing Medical University\" for research proposal design on m6A methylation in autism mechanism</b>."
         }
       ]
     },
