--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.3.1",
     "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.20",
