--- a/public/config.json
+++ b/public/config.json
@@ -149,8 +149,7 @@
         {
           "university": {
            "name": "Chongqing Medical University",
-           "url": "https://www.cqmu.edu.cn/",
-           "logo": ""
+           "url": "https://www.cqmu.edu.cn/"
           },
           "time": "September 2018 - July 2023",
           "major": "Bachelor of Medicine in Medical Imaging (Radiology and Diagnostic Technology)",
@@ -160,8 +159,7 @@
         {
           "university": {
             "name": "Sichuan university",
-            "url": "https://www.scu.edu.cn/",
-            "logo": ""
+            "url": "https://www.scu.edu.cn/"
           },
           "time": "July 2023 - Present",
           "major": "Master of Medicine in Basic Medicine (Chemistry and Molecular Biology)",
@@ -173,29 +171,26 @@
         {
           "location":{
             "name": "The Beibei Affiliated Hospital of Chongqing Medical University",
-            "url": "https://www.cq9yuan.com/",
-            "logo": ""
+            "url": "https://www.cq9yuan.com/"
           },
           "time": "Jan 2022 - Jun 2022",
-          "work": "work experience..."
+          "work": "Medical Imaging and Diagnostic Radiology, Ultrasound Diagnostics, Interventional Radiology, Nuclear Medicine, Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Physiology, Biochemistry and Molecular Biology, Pathology, Immunology, and Cell Biology"
         },
         {
           "location": {
             "name": "The Second Affiliated Hospital of Chongqing Medical University",
-            "url": "https://www.sahcqmu.com/",
-            "logo": ""
+            "url": "https://www.sahcqmu.com/"
           },
           "time": "Jun 2022 - Jan 2023",
-          "work": "work experience..."
+          "work": "Medical Imaging and Diagnostic Radiology, Ultrasound Diagnostics, Interventional Radiology, Nuclear Medicine, Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Physiology, Biochemistry and Molecular Biology, Pathology, Immunology, and Cell Biology"
         },
         {
           "location": {
             "name": "The University-Town Affiliated Hospital of Chongqing Medical University",
-            "url": "http://www.uhcmu.com/",
-            "logo": ""
+            "url": "http://www.uhcmu.com/"
           },
           "time": "Jan 2023 - Jun 2023",
-          "work": "work experience..."
+          "work": "Medical Imaging and Diagnostic Radiology, Ultrasound Diagnostics, Interventional Radiology, Nuclear Medicine, Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Physiology, Biochemistry and Molecular Biology, Pathology, Immunology, and Cell Biology"
         }
       ],
       "researchProjects" : [
@@ -203,8 +198,7 @@
           "time": "Jan 2020 - Jan 2022",
           "location": {
             "name": "Institute Brain Science and Disease of Chongqing Medical University",
-            "url": "https://brain.cqmu.edu.cn/index.htm",
-            "logo": ""
+            "url": "https://brain.cqmu.edu.cn/index.htm"
           },
           "directors": [
             {
@@ -212,13 +206,12 @@
               "link": "https://brain.cqmu.edu.cn/info/1026/1632.htm"
             }
           ],
-          "work": "work experience..."
+          "work": "Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!"
         },
         {
           "location": {
             "name": "West China school of Basic Medical Sciences & Forensic Medicine of Sichuan University",
-            "url": "https://jcfy.scu.edu.cn/",
-            "logo": ""
+            "url": "https://jcfy.scu.edu.cn/"
           },
           "time": "",
           "directors": [
@@ -227,7 +220,7 @@
               "link": "http://hcanhua.cn/"
             }
           ],
-          "work": "work experience..."
+          "work": "Coming Soon..."
         },
         {
           "location": {
@@ -243,7 +236,7 @@
             ]
           },
           "time": "",
-          "work": "work experience..."
+          "work": "Coming Soon..."
         }
       ],
       "skills": [
