--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.1",
     "rehype-katex": "^7.0.1",
@@ -39,6 +40,7 @@
     "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
+    "slick-carousel": "^1.8.1",
     "video-embed": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
