--- a/public/config.json
+++ b/public/config.json
@@ -10,7 +10,7 @@
       },
       "name": "MMeowhite",
       "institution": "Sichuan University",
-      "field": "MEDICINE / Computer Science / MATHEMATICS / PHYSICS",
+      "field": "MEDICINE / COMPUTER SCIENCE / MATHEMATICS / PHYSICS",
       "profile": "Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!Hello! I'm Baimiaomiao, a researcher and educator at Sichuan University. My expertise lies in medicine, bioinformatics, mathematics, and physics, with a focus on leveraging computational techniques to solve biomedical challenges. Passionate about interdisciplinary research, I aim to bridge the gap between technology and healthcare to drive innovation. Welcome to my website, where I share my work, ideas, and ongoing projects. Let's connect and explore new possibilities together!",
       "quote": "What hinders learning is absolutely not the difficulty of the knowledge itself, but the unreasonable design of the learning gradient and the lack of prerequisite knowledge.",
       "experienceSection": {
@@ -19,12 +19,22 @@
           {
             "period": "2018.09-2023.06",
             "university": "Chongqing Medical University",
-            "degree": "Bachelor in Clinical Medicine (Direction: Radiology)"
+            "logo": "/images/experience/ChongqingMedicalUniversity.jpg",
+            "url": "https://www.scu.edu.cn",
+            "degree": "Bachelor in Clinical Medicine (Direction: Radiology)",
+            "gpa": "3.6 / 5.0",
+            "course": "Medical Imaging and Diagnostic Radiology, Ultrasound Diagnostics, Interventional Radiology, Nuclear Medicine, Internal Medicine, Surgery, Obstetrics and Gynecology, Pediatrics, Physiology, Biochemistry and Molecular Biology, Pathology, Immunology, and Cell Biology",
+            "additionalCourse": "Math"
           },
           {
             "period": "2023.07-Present",
+            "logo": "/images/experience/SichuanUniversity.jpg",
+            "url": "https://www.cqmu.edu.cn",
             "university": "Sichuan University",
-            "degree": "Master in Basic Medicine (Direction: Biochemistry and Molecular Biology )"
+            "degree": "Master in Basic Medicine (Direction: Biochemistry and Molecular Biology )",
+            "gpa": "3.6 / 4.0",
+            "course": "The Basic Cellular and Molecular Principles of Pathogenesis, Medical Molecular Biology, Medicinal Biotechnology Frontier, Seperation and Purification Technology of Protein and Enzyme, Nucleic Acid Molecular Cloning Technique, Practical Histological Technique",
+            "additionalCourse": "Physics"
           }
         ],
         "timeline": [
@@ -81,33 +91,43 @@
       },
       "featuredPublications": [
         {
-          "authors": " John Doe, Jane Smith ",
-          "date": "May 30, 2020",
-          "journal": "Nature",
+          "authors": " Mengmeng Zhang, Xiangru Kong, Jing Chen, Wenqin Liu, Can Liu, Xiaoyun Dou, Lin Jiang, Yanmin Luo, Mingrui Song, Peng Miao, Yong Tang, Yun Xiu ",
+          "date": "July 1, 2023",
+          "journal": "Journal of Affective Disorders",
           "featuredImages": [
             {
               "src": "/images/featuredImages/img.png",
-              "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit-1."
+              "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit-1.",
+              "link": "https://www.sciencedirect.com/user/identity/landing?code=jGe-vRhQMwishoa6V5yfEZklFkX62_14laUrwDwC&state=retryCounter%3D0%26csrfToken%3D2383bc0d-36f5-4667-a650-d8dcad41ddfd%26idpPolicy%3Durn%253Acom%253Aelsevier%253Aidp%253Apolicy%253Aproduct%253Ainst_assoc%26returnUrl%3D%252Fscience%252Farticle%252Fpii%252FS0165032723004305%26prompt%3Dnone%26cid%3Darp-774054fb-f3de-4710-9b5d-0c915f0a68d3"
             },
             {
               "src": "/images/featuredImages/img_1.png",
-              "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit-2."
+              "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit-2.",
+              "link": "https://www.sciencedirect.com/user/identity/landing?code=jGe-vRhQMwishoa6V5yfEZklFkX62_14laUrwDwC&state=retryCounter%3D0%26csrfToken%3D2383bc0d-36f5-4667-a650-d8dcad41ddfd%26idpPolicy%3Durn%253Acom%253Aelsevier%253Aidp%253Apolicy%253Aproduct%253Ainst_assoc%26returnUrl%3D%252Fscience%252Farticle%252Fpii%252FS0165032723004305%26prompt%3Dnone%26cid%3Darp-774054fb-f3de-4710-9b5d-0c915f0a68d3"
             },
             {
               "src": "/images/featuredImages/img_2.png",
-              "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit-3."
+              "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit-3.",
+              "link": "https://www.sciencedirect.com/user/identity/landing?code=jGe-vRhQMwishoa6V5yfEZklFkX62_14laUrwDwC&state=retryCounter%3D0%26csrfToken%3D2383bc0d-36f5-4667-a650-d8dcad41ddfd%26idpPolicy%3Durn%253Acom%253Aelsevier%253Aidp%253Apolicy%253Aproduct%253Ainst_assoc%26returnUrl%3D%252Fscience%252Farticle%252Fpii%252FS0165032723004305%26prompt%3Dnone%26cid%3Darp-774054fb-f3de-4710-9b5d-0c915f0a68d3"
             }
           ],
-          "title": "here is your paper title1",
-          "abstract": "here is your paper abstract1",
+          "title": "Dysfunction of GluN3A subunit is involved in depression-like behaviors through synaptic deficits",
+          "abstract": "GluN3A, an inhibitory subunit of N-methyl-d-aspartate receptors (NMDARs), plays an unclear role in depression. In this study, we examined GluN3A expression in a chronic restraint stress (CRS) mouse model of depression and explored its molecular mechanisms. We found that GluN3A expression was significantly reduced in the hippocampus of CRS mice, and restoring GluN3A expression alleviated depression-like behaviors. Furthermore, GluN3A knockout (KO) mice exhibited symptoms of anhedonia and despair, alongside downregulation of genes involved in synapse and axon development. Reduced PSD95 levels in GluN3A KO mice were rescued by viral re-expression of GluN3A, highlighting its crucial role in regulating synaptic function and depression-related behaviors. Despite these findings, the full mechanism by which GluN3A contributes to depression remains unclear.",
           "buttons": [
             {
               "name": "PDF",
-              "link": ""
+              "logo": "",
+              "link": "https://www.sciencedirect.com/user/identity/landing?code=jGe-vRhQMwishoa6V5yfEZklFkX62_14laUrwDwC&state=retryCounter%3D0%26csrfToken%3D2383bc0d-36f5-4667-a650-d8dcad41ddfd%26idpPolicy%3Durn%253Acom%253Aelsevier%253Aidp%253Apolicy%253Aproduct%253Ainst_assoc%26returnUrl%3D%252Fscience%252Farticle%252Fpii%252FS0165032723004305%26prompt%3Dnone%26cid%3Darp-774054fb-f3de-4710-9b5d-0c915f0a68d3"
             },
             {
               "name": "CODE",
-              "link": ""
+              "logo": "",
+              "link": "https://github.com/MMeowhite/Profile_Website_Template"
+            },
+            {
+              "name": "Video",
+              "logo": "",
+              "link": "https://www.bilibili.com"
             }
           ]
         },
@@ -318,24 +338,28 @@
   "widgets": {
     "navbar": {
       "item1": {
-        "name": "home",
+        "name": "Home",
         "link": "#home"
       },
       "item2": {
-        "name": "about",
-        "link": "#about"
+        "name": "Education",
+        "link": "#education"
       },
       "item3": {
-        "name": "skill",
-        "link": "#skill"
+        "name": "Experience",
+        "link": "#experience"
       },
       "item4": {
-        "name": "contact",
-        "link": "#contact"
+        "name": "Publication",
+        "link": "#publication"
+      },
+      "item6" : {
+        "name": "CV",
+        "link": "#cv"
       },
       "item5": {
-        "name": "research",
-        "link": "#research"
+        "name": "Contact",
+        "link": "#contact"
       }
     },
 
