--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.20",
+    "lodash": "^4.17.21",
     "markmap": "^0.6.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
